tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:22:11 --------------------------------------
22 |    cur = (() => f.write()) :: Nil // error
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |           Found:    List[box () ->{f} Unit]
   |           Required: List[box () ->{xs*} Unit]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:33:7 ---------------------------------------
33 |      (() => f.write()) :: Nil // error
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |       Found:    List[box () ->{f} Unit]
   |       Required: box List[box () ->{xs*} Unit]^?
   |
   |       Note that reference (f : File^), defined in method $anonfun
   |       cannot be included in outer capture set {xs*} of value cur
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:38:31 -----------------------------------------------------------
38 |    val next: () => Unit = cur.head // error
   |                           ^^^^^^^^
   |                       The expression's type box () => Unit is not allowed to capture the root capability `cap`.
   |                       This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/reaches.scala:45:35 -----------------------------------------------------------
45 |    val next: () => Unit = cur.get.head // error
   |                           ^^^^^^^^^^^^
   |                       The expression's type box () => Unit is not allowed to capture the root capability `cap`.
   |                       This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/reaches.scala:55:6 ------------------------------------------------------------
55 |    id(() => f.write()) // error
   |    ^^^^^^^^^^^^^^^^^^^
   |    Local reach capability id* leaks into capture scope of method test
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:62:27 --------------------------------------
62 |    val f1: File^{id*} = id(f) // error, since now id(f): File^
   |                         ^^^^^
   |                         Found:    File^{f}
   |                         Required: File^{id*}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:79:10 -----------------------------------------------------------
79 |  ps.map((x, y) => compose1(x, y)) // error // error
   |          ^
   |          Local reach capability ps* leaks into capture scope of method mapCompose
-- Error: tests/neg-custom-args/captures/reaches.scala:79:13 -----------------------------------------------------------
79 |  ps.map((x, y) => compose1(x, y)) // error // error
   |             ^
   |             Local reach capability ps* leaks into capture scope of method mapCompose
-- [E057] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:53:51 --------------------------------------
53 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                                                   ^
   |                                             Type argument () -> Unit does not conform to lower bound () => Unit
   |
   | longer explanation available when compiling with `-explain`
